Minor refactor: use immutable list